updated resume, projects and about me sections

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 </button>
               </a>
 
-              <a href="https://scholar.google.com/citations?user=LF1YsukAAAAJ&hl=en&authuser=1" target="_blank">
+              <a href="https://scholar.google.com/citations?user=DNIsbSwAAAAJ&hl=en&authuser=2" target="_blank">
                 <button class="icon-btn scholar">
                   <i class="ai ai-google-scholar scholar"></i>
                 </button>
@@ -299,7 +299,7 @@
         </p>    
         <p>
           My research interests include Security and Privacy, Human-centered AI Engineering, Machine Learning and it's applications. 
-          I enjoy researching Machine Learning topics and applying my skills to tackle problems that intrigue me. I am also enthusiastic about creating sophisticated programs that solve real-world problems for millions of users.
+          I enjoy exploring Machine Learning realted topics and applying my skills to tackle problems that intrigue me. I am also enthusiastic about creating sophisticated programs that solve real-world problems for millions of users.
         </p>
         <p>
           I have received my B.Sc (Engg.) in Computer Science and Engineering from <a href="https://www.buet.ac.bd/web/#/" target="_blank"
@@ -308,9 +308,8 @@
 
         </p>
         <p>
-          Besides that, I have worked on preventing the spread of Covid related misinformation in social media under the supervision of <a href="https://giasuddin.ca/" target="_blank"
-          class="teal-text hoverline"><b>Dr. Gias Uddin</b></a> and <a href="https://scholar.google.com/citations?user=jAuiNFgAAAAJ&hl=en" target="_blank"
-          class="teal-text hoverline"><b>Dr. Anindya Iqbal</b></a>.
+          In my research, I employ my designing, prototyping, and coding skills to iteratively design and build effective technology to answer my research questions. I also use statistical analyses, machine learning techniques,
+           and several static and dynamic analyses depending on the research problems.
         </p>
         <!--<p>
           <ul>
@@ -612,14 +611,12 @@
 
     <!-- Research Works -->
     <section id="research_works" class="section scrollspy">
-      <h3 class="page-title white-text teal">Research Projects</h3>
+      <h3 class="page-title white-text teal">Research and Class Projects</h3>
       <div class="container">
         <div class="col s12 m6 l6">
           <div class="card">
             <div class="card-content">
-              <h4>"Are You Misinformed? A Study of Covid-Related Fake News in Bengali on Facebook"</h4>
-              <p><u>Author</u>: <b>Protik Bose Pranto</b>, Syed Zamiul Haque Navid, Protik Dey, Gias Uddin, and Anindya Iqbal</p>
-              <!-- <p><u>Status</u>: <b>Submitted</b> at The ACM CHI Conference on Human Factors in Computing Systems, <b>CHI (2022)</b>.</p> -->
+              <h4>Bengali Covid Related Fake News Detection</h4>
               <br><p>Our opinions and views of life can be shaped by how we perceive the opinions of others on social media like Facebook. 
                 This dependence has increased during COVID-19 periods when we have fewer means to connect with others. 
                 However, fake news related to COVID-19 has become a significant problem on Facebook. Bengali is the seventh most
@@ -634,43 +631,28 @@
         <div class="col s12 m6 l6">
           <div class="card">
             <div class="card-content">
-              <h4>"On 2-Interval Pairwise Compatibility Properties of Two Classes of Grid Graphs"</h4>
-              <p><u>Author</u>: Bishal Basak Papan, <b>Protik Bose Pranto</b>, and Md. Saidur Rahman.</p>
-              <p><u>Status</u>: <b>Accepted</b> at The Computer Journal, <b>COMPJ (2021)</b>.</p>
-              <br><p>A graph <i>G=(V, E)</i> is called a pairwise compatibility graph (PCG, for short) if it admits a tuple(T, d_min, d_max) of 
-                an edge-weighted tree <i>T</i> of non-negative edge weights with leaf set <i>L</i>, two non-negative real numbers <i>d_min</i> ≤ <i>d_max</i> such 
-                that each vertex <i>u′∈ V</i> represents a leaf <i>u ∈ L</i> and <i>G</i> has an edge <i>(u′, v′) ∈ E</i> if and only if the distance between the two 
-                leaves <i>u</i> and <i>v</i> in the tree <i>T</i> lies within the interval [d_min, d_max]. It has been proven that not all graphs are PCGs. 
-                A graph <i>G</i> is called a <i>k</i>-interval PCG if there exists an edge-weighted tree <i>T</i> and <i>k</i> mutually exclusive intervals of 
-                non-negative real numbers such that there is an edge between two vertices in <i>G</i> if and only if the distance 
-                between their corresponding leaves in <i>T</i> lies within any of the <i>k</i> intervals. It is known that every graph <i>G</i> is 
-                a <i>k</i>-interval PCG for k=|E|, where <i>E</i> is the set of edges of <i>G</i>. It is thus interesting to know the smallest value 
-                of <i>k</i> for which <i>G</i> is a <i>k</i>-interval PCG. In this paper, we show that grid graphs and a subclass of 3D grid graphs 
-                are 2-interval PCGs.</p>
+              <h4>Satire or Fake news? Machine Learning Based Approaches to Resolve the Dilemma</h4>
+              <a href="https://protikbose.github.io/assets/publication/Satire_Fake.pdf" target="_blank"><span><b>[PDF]</b></span></a>  
+              <br><p>Due to the nature of satirical news, it can sometimes be challenging to separate satire posts/news from fake news. In this experiment, I used nine widely used traditional machine learning models and three transformer-based traditional models
+                (BERT, XLM-RoBERTa, DistilBERT) to see whether they can distinguish effectively between fake and satirical
+                news. SVM performs better on a small dataset when text preprocessing and stemming are used. To increase the datasize, I applied Back Translattion and a similarity score threshold to augment data. Finally, after text
+                augmentation, the transformer-based model (XLM-RoBERTa) outperforms all other models, achieving 97% accuracy.</p>
             </div>
           </div>
         </div>
         <div class="col s12 m6 l6">
           <div class="card">
             <div class="card-content">
-              <h4>"<i>k</i>-Safe Labelings of Connected Graphs"</h4>
-              <p><u>Author</u>: <b>Protik Bose Pranto</b>, Bishal Basak Papan, and Md. Saidur Rahman.</p>
-              <p><u>Status</u>: <b>Accepted</b> at IEEE International Conference on Telecommunications and Photonics, <b>ICTP (2021)</b>.</p>
-              <br><p>In a <i>k</i>-safe labeling of a graph <i>G</i>, each vertex is labeled by a distinct positive integer such that 
-                the difference of the labels of two adjacent vertices is at least <i>k</i>. The span of a <i>k</i>-safe labeling of <i>G</i> is 
-                the range between the minimum and the maximum labels used in <i>G</i>. The <i>k</i>-safe labeling problem asks to label 
-                all the vertices of <i>G</i> using the minimum span. This problem has practical applications in assigning 
-                frequencies of transmitters in a network. <i>k</i>-safe labeling problem has been proven to be NP-hard and there 
-                is not an exact upper bound on the span of <i>k</i>-safe labeling of a graph. In this paper, we give an upper 
-                bound on <i>k</i>-safe labelings of all connected graphs based on the size of the maximum clique in the graph. 
-                Our proof leads to a polynomial-time algorithm for finding a <i>k</i>-safe labeling of any connected graph.</p>
+              <h4>Feature-Based App Analysis</h4>
+              
+              <br><p>In this experiment, I am conducting an Automated exploration of an app's features to scrutinize the data collected from network traffic using MitmProxy, Frida, and Objection. In some cases, where data is obfuscated or altered before transmission, deciphering the associated permission methods becomes challenging. To address this, I have employed Frida Hooking to identify the specific permission methods called by the app and understand their utilization.</p>
             </div>
           </div>
         </div>
         <div class="col s12 m6 l6">
           <div class="card">
             <div class="card-content">
-              <h4>"Violence Detection from Surveillance Videos"</h4>
+              <h4>Violence Detection from Surveillance Videos</h4>
               <ul>
                 <li>We extracted two kinds of features from videos</li>
                 <li>Those features entail deep representation from I3D and optical flow from OpenPose</li>
@@ -995,13 +977,13 @@
             <div class="card-content">
               <p>
                 <ul>
-                  <li><b>Languages:</b> C, C++, Java, Dart, Python, HTML, Assembly(80x86), Matlab, SQL, Typescript, F#, Bash.</li>
+                  <li><b>Languages:</b> C, C++, Java, R, Dart, Python, HTML, Assembly(80x86), Matlab, SQL, Typescript, F#, Bash.</li>
                   <li><b>Environment:</b> CodeBlocks, NetBeans, Emu8086, Android Studio, Visual Studio Code, Proteus.</li>
                   <li><b>Mobile Application Development:</b> Android, Flutter, React Native.</li>
                   <li><b>Databases:</b> Oracle, MySQL, SQLite.</li>
                   <li><b>Tools and Platforms:</b> Git, Unity, Lucidchart, draw.io, OpenCV, Cuda, JavaFX Scene Builder, Tensorflow, Keras,
                     PyTorch, Scikit-learn.</li>
-                  <li><b>Other:</b> Latex, Microsoft Office, Microsoft Powerpoint, Probability and Statistics, Data Structures, Unity.</li>
+                  <li><b>Other:</b> Qualtrics, Latex, Microsoft Office, Microsoft Powerpoint, Probability and Statistics, Data Structures, Unity.</li>
                 </ul>
                 
               </p>
@@ -1015,6 +997,34 @@
     <section id="education" class="section scrollspy">
       <h3 class="page-title white-text teal">Education</h3>
       <div class="container">
+          <div class="col s12 m6 l6">
+            <div class="card">
+              <div class="card-content">
+                <p>
+                  <span class="card-title"><a href="https://www.asu.edu/" target="_blank" class="teal-text hoverline"><b>Arizona State University</b></a></span>
+                </p>
+                <p class="brown-text">Tempe, Arizona</p>
+                <p>
+                  <b>Degree: </b>Ph.D. in Computer Science and Engineering (ongoing)
+                </p>
+
+                <ul>
+                  <p>
+                    <b>Relevant Courseworks:</b>
+                  <ul>
+                    <li>Data Mining</li>
+                    <li>Software Security</li>
+                    <li>Statistical Machine Learning</li>
+                    <li>Knowledge Representation and Reasoning</li>
+                  </ul>
+                  </p>
+
+                </ul>
+              </div>
+            </div>
+          </div>
+
+
           <div class="col s12 m6 l6">
             <div class="card">
               <div class="card-content">
