added the hackathon result

--- a/index.html
+++ b/index.html
@@ -350,14 +350,16 @@
           <div class="card">
             <div class="card-content">
               <ul id="news-list">
+                <p><ul></ul></p><li><b>March 2025:</b> Secured runners-up at SpaceHACK for Sustainability Hackathon.</li>
                 <p><ul></ul></p><li><b>Feb 2025:</b> Awarded 3rd place at UCRC Poster Event.</li>
                 <p><ul></ul></p><li><b>Oct 2024:</b> Paper on differentiating between satire and fake news got accepted at ICECCME'24.</li>
                 <p><ul></ul></p><li><b>July 2023:</b> Awarded USENIX Security Student Grant.</li>
                 <p><ul></ul></p><li><b>June 2023:</b> Poster on Targeted Disinformation got accepted in SOUPS'23.</li>
                 <p><ul></ul></p><li><b>June 2023:</b> Poster on EdTech App Review Analysis got accepted in SOUPS'23.</li>
-                <p><ul></ul></p><li><b>Apr 2023:</b> Presented my current research at the ASU Cybersecurity Symposium.</li>
+                
                 <!-- Hidden initially -->
                 <div id="more-news" style="display:none;">
+                  <p><ul></ul></p><li><b>Apr 2023:</b> Presented my current research at the ASU Cybersecurity Symposium.</li>
                   <p><ul></ul></p><li><b>Feb 2023:</b> Got accepted into the post-CHI summer school on Usable Privacy and Security.</li>
                   <p><ul></ul></p><li><b>Mar 2022:</b> Been awarded the SCAI Doctoral Fellowship.</li>
                   <p><ul></ul></p><li><b>Feb 2022:</b> Got accepted into Arizona State University's PhD in Computer Science program.</li>
