added spackhack recognition

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
           <div class="card">
             <div class="card-content">
               <ul id="news-list">
-                <p><ul></ul></p><li><b>March 2025:</b> Secured runners-up at SpaceHACK for Sustainability Hackathon.</li>
+                <p><ul></ul></p><li><b>March 2025:</b> Secured runners-up at SpaceHACK for Sustainability Hackathon. <a href="assets/publication/SpackHack_Recognition.pdf" target="_blank"><span><b>[Letter]</b></span></a> </li>
                 <p><ul></ul></p><li><b>Feb 2025:</b> Awarded 3rd place at UCRC Poster Event.</li>
                 <p><ul></ul></p><li><b>Oct 2024:</b> Paper on differentiating between satire and fake news got accepted at ICECCME'24.</li>
                 <p><ul></ul></p><li><b>July 2023:</b> Awarded USENIX Security Student Grant.</li>
